--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
 
 
     <EditText
+        android:id="@+id/edittext_temperature"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/hint_temperature"
@@ -73,16 +74,29 @@
 
         />
 
+    <Button
+        android:id="@+id/btn_kelvin"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:text="@string/str_btnKelvin"
+        android:textSize="16sp"
+        android:textAllCaps="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
+
     <TextView
         android:id="@+id/textview_result_number"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/color_result"
         android:textSize="35sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal2"/>
+        app:layout_constraintBottom_toTopOf="@id/guideline_horizontal2"/>
 
     <TextView
         android:id="@+id/textview_result_message"
